--- a/index.html
+++ b/index.html
@@ -503,10 +503,13 @@
             <use href="./images/icon.svg#close"></use>
           </svg>
         </button>
+        <form class="register-form" name="register-form"></form>>
+
+        </form>
       </div>
     </div>
     <script src="./js/modal.js"></script>
-  
+ 
   </body>
 </html>
 
