--- a/index.html
+++ b/index.html
@@ -503,8 +503,93 @@
             <use href="./images/icon.svg#close"></use>
           </svg>
         </button>
-        <form class="register-form" name="register-form"></form>>
+        <form class="register-form" name="register-form">
+        <strong class="register-form-title">Залиште свої дані, ми вам передзвонимо</strong>
 
+        <div class="register-form-group" role="group">
+          <label class="register-form-field">
+            <input
+              class="register-form-input"
+              type="text"
+              name="user-name"
+              required
+              minlength="3"
+              placeholder=""/>
+            <span class="register-form-label">Ім'я</span>
+            <svg class="register-form-icon" width="18" height="18">
+              <use href="./images/sprite.svg#profile"></use>
+            </svg>
+            <svg class="register-form-notification" width="22" height="22">
+              <use class="warning" href="./images/sprite.svg#icon-warning"></use>
+              <use class="success" href="./images/sprite.svg#icon-success"></use>
+            </svg>
+          </label>
+
+          <label class="register-form-field">
+            <input
+              class="register-form-input"
+              type="text"
+              name="user-phone"
+              required
+              minlength="12"
+              maxlength="12"
+              placeholder=""
+            />
+            <span class="register-form-label">Телефон</span>
+            <svg class="register-form-icon" width="22" height="22">
+              <use href="./images/sprite.svg#phone"></use>
+            </svg>
+            <svg class="register-form-notification" width="22" height="22">
+              <use class="warning" href="./images/sprite.svg#icon-warning"></use>
+              <use class="success" href="./images/sprite.svg#icon-success"></use>
+            </svg>
+          </label>
+
+          <label class="register-form-field">
+            <input
+              class="register-form-input"
+              type="email"
+              name="user-mail"
+              required
+              placeholder=""
+            />
+            <span class="register-form-label">Пошта</span>
+            <svg class="register-form-icon" width="22" height="22">
+              <use href="./images/sprite.svg#envelope"></use>
+            </svg>
+            <svg class="register-form-notification" width="22" height="22">
+              <use class="warning" href="./images/sprite.svg#icon-warning"></use>
+              <use class="success" href="./images/sprite.svg#icon-success"></use>
+            </svg>
+          </label>
+
+          <label class="register-form-field">
+            <span class="register-form-heading">Коментар</span>
+            <textarea
+              class="register-form-message"
+              name="user-message"
+              rows="5"
+              placeholder="Введіть текст"></textarea>
+          </label>
+        </div>
+
+        <label class="register-form-agreement">
+          <input
+            class="register-form-checkbox visually-hidden"
+            type="checkbox"
+            name="user-agreement"
+          />
+          <svg class="register-form-icons" width="20" height="20">
+            <use class="icon-checked" href="./images/sprite.svg#checked"></use>
+            <use class="icon-unchecked" href="./images/sprite.svg#unchecked"></use>
+          </svg>
+          <span class="register-form-desc">
+            Погоджуюся з розсилкою та приймаю 
+            <a class="register-form-link" href="" target="_blank">Умови договору</a>
+          </span>
+        </label>
+
+        <button class="register-form-btn" type="submit">Відправити</button>
         </form>
       </div>
     </div>
