--- a/index.html
+++ b/index.html
@@ -533,8 +533,7 @@
               required
               minlength="12"
               maxlength="12"
-              placeholder=""
-            />
+              placeholder=""/>
             <span class="register-form-label">Телефон</span>
             <svg class="register-form-icon" width="22" height="22">
               <use href="./images/sprite.svg#phone"></use>
@@ -551,8 +550,7 @@
               type="email"
               name="user-mail"
               required
-              placeholder=""
-            />
+              placeholder=""/>
             <span class="register-form-label">Пошта</span>
             <svg class="register-form-icon" width="22" height="22">
               <use href="./images/sprite.svg#envelope"></use>
