--- a/index.html
+++ b/index.html
@@ -494,8 +494,19 @@
         </li>
       </ul>
     </div>
-    </div>
-    </footer>
+    <div class="footer-subscription">
+        <form action="#">
+        <strong class="footer-title">Підпишіться на розсилку</strong>
+        <label class="footer-label">
+        <input class="footer-mail" type="email" name="email" placeholder="E-mail">
+      </label>
+        <button class="footer-btn" type="submit">Підписатися
+        <svg class="footer-icon" width="24" height="24">
+          <use href="./images/icon.svg#icon-send"></use>
+        </svg>
+      </button>
+      </form>
+      </div>
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button class="modal-btn" type="button" data-modal-close>
