--- a/index.html
+++ b/index.html
@@ -507,6 +507,7 @@
       </button>
       </form>
       </div>
+      </footer>
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button class="modal-btn" type="button" data-modal-close>
