--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer"/>
-    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/styles.css"/>
   </head>
   <body>
     <header class="header">
@@ -55,7 +55,7 @@
       <section class="hero">=
         <div class="container">
         <h1 class="hero-title"
-          >ЕФЕКТИВНІ РІШЕННЯ ДЛЯ<br />
+          >ЕФЕКТИВНІ РІШЕННЯ ДЛЯ<br/>
           ВАШОГО БІЗНЕСУ</h1>
         <button data-modal-open type="button" class="button-primary">Замовити послугу</button>
       </div>
@@ -117,7 +117,7 @@
           <ul class="work-list">
             <li class="work-our">
               <div class="thumb">
-              <img src="./images/box1.jpg" alt="опрацювання данних" width="370" />
+              <img src="./images/box1.jpg" alt="опрацювання данних" width="370"/>
                 <p class="label">Десктопні додатки</p>
               </div>
             
@@ -125,13 +125,13 @@
 
             <li class="work-our">
               <div class="thumb">
-              <img src="./images/box2.jpg" alt="опрацювання інформації" width="370" />
+              <img src="./images/box2.jpg" alt="опрацювання інформації" width="370"/>
               <p class="label">Мобільні додатки</p>
             </div>
             </li>
             <li class="work-our">
             <div class="thumb">
-            <img src="./images/box3.jpg" alt="створення web проектів" width="370" />
+            <img src="./images/box3.jpg" alt="створення web проектів" width="370"/>
               <p class="label">Дизайнерські рішення</p>
             </div>
             </li>
@@ -144,7 +144,7 @@
           <h2 class="section-title">Наша команда</h2>
           <ul class="list-team">
             <li class="team-iten">
-              <img src="./images/img11.jpg" alt="працівник1" width="270" />
+              <img src="./images/img11.jpg" alt="працівник1" width="270"/>
               <div class="team-job">
               <h3 class="title-name">Ігор Дем'яненко</h3>
               <p class="job-title">Product Designer</p>
@@ -497,6 +497,7 @@
     <div class="footer-subscription">
         <form action="#">
         <strong class="footer-title">Підпишіться на розсилку</strong>
+        <div class="footer-list">
         <label class="footer-label">
         <input class="footer-mail" type="email" name="email" placeholder="E-mail">
       </label>
@@ -505,9 +506,10 @@
           <use href="./images/icon.svg#icon-send"></use>
         </svg>
       </button>
+    </div>
       </form>
       </div>
-      </footer>
+  </footer>
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button class="modal-btn" type="button" data-modal-close>
@@ -532,10 +534,6 @@
             <svg class="register-form-icon" width="18" height="18">
               <use href="./images/icon.svg#person"></use>
             </svg>
-            <!--<svg class="register-form-notification" width="22" height="22">
-              <use class="warning" href="./images/sprite.svg#icon-warning"></use>
-              <use class="success" href="./images/sprite.svg#icon-success"></use>
-            </svg>-->
           </label>
 
           <label class="register-form-field">
@@ -552,10 +550,6 @@
             <svg class="register-form-icon" width="22" height="22">
               <use href="./images/icon.svg#phone"></use>
             </svg>
-            <!--<svg class="register-form-notification" width="22" height="22">
-              <use class="warning" href="./images/sprite.svg#icon-warning"></use>
-              <use class="success" href="./images/sprite.svg#icon-success"></use>
-            </svg>-->
           </label>
 
           <label class="register-form-field">
@@ -570,10 +564,6 @@
             <svg class="register-form-icon" width="22" height="22">
               <use href="./images/icon.svg#email"></use>
             </svg>
-            <!--<svg class="register-form-notification" width="22" height="22">
-              <use class="warning" href="./images/sprite.svg#icon-warning"></use>
-              <use class="success" href="./images/sprite.svg#icon-success"></use>
-            </svg>-->
           </label>
 
           <label class="register-form-field">
@@ -587,16 +577,16 @@
         </div>
 
         <label class="register-form-agreement">
+          <svg class="register-form-icons" width="20" height="20">
+            <use class="icon-checked" href="./images/icon.svg#icon-check"></use>
+            <!--<use class="icon-unchecked" href="./images/icon.svg#unchecked"></use>-->
+           </svg>
           <input
             class="register-form-checkbox visually-hidden"
             type="checkbox"
             name="user-agreement"
           />
-          <svg class="register-form-icons" width="20" height="20">
-            <use class="icon-checked" href="./images/icon.svg#checked"></use>
-            <use class="icon-unchecked" href="./images/icon.svg#unchecked"></use>
-          </svg>
-          <span class="register-form-desc">
+        <span class="register-form-desc">
             Погоджуюся з розсилкою та приймаю 
             <a class="register-form-link" href="" target="_blank">Умови договору</a>
           </span>
