update index header

--- a/index.html
+++ b/index.html
@@ -49,7 +49,9 @@
             >
           </ul>
         </div>
-    
+    <div>
+      <link href="https://cdn.jsdelivr.net/npm/@n8n/chat/dist/style.css" rel="stylesheet" /> <script type="module"> import { createChat } from 'https://cdn.jsdelivr.net/npm/@n8n/chat/dist/chat.bundle.es.js'; createChat({ webhookUrl: 'https://bot.neuro.bz/webhook/e5b0a1f8-2b11-47a4-95ab-de8f95b43f73/chat', defaultLanguage: 'ru', initialMessages: [ 'Привет!', 'Меня зовут Феликс, я Нейро Саппорт, чем я могу тебе помочь?' ], i18n: { ru: { title: 'Феликс', subtitle: "", footer: '', getStarted: 'Новая беседа', inputPlaceholder: 'Напишите ваш вопрос', }, }, }); </script>
+    </div>
     </header>
     <main>
       <section class="hero">=
